services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: netology
spec:
  selector:
    app: backend
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: netology
spec:
  selector:
    app: cache
  ports:
  - port: 6379
